# Searchify

./: README.md
Pauk/: CMakeLists.txt  Parser.h  Pauk.cpp  Pauk.h  data.ini  main.cpp  syntax.h
Server/: CMakeLists.txt  Parser.h  Server.cpp  Server.h  data.ini  main.cpp  syntax.h
