cmake_minimum_required (VERSION 3.8)
project (DiplomServer)
set(CMAKE_CXX_STANDARD 17)
set(SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
configure_file (${SOURCE_DIR}/data.ini ${CMAKE_CURRENT_BINARY_DIR}/data.ini COPYONLY)
find_package(boost REQUIRED COMPONENTS system)
include_directories(C:/OpenSSL/include)
link_directories(C:/OpenSSL/lib)
link_directories(C:/boost/stage/lib)
add_subdirectory(libpqxx libpqxx-build)
add_executable (DiplomServer  main.cpp syntax.h Parser.h Server.h Server.cpp)
target_link_libraries(DiplomServer Boost::boost libcrypto_static pqxx)
